﻿2007-02-01  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/updatewindow.cpp: File handle should be closed before
	attempting to remove/rename files.
	* src/gui/button.h: Fixed buttons loosing focus.

2007-02-01  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/updatewindow.cpp, src/gui/updatewindow.h: A bit of cleanup
	and defined a helper function for calculating the alder32 checksum of
	a file. Probably not fixing any bug though.

2007-02-01  Philipp Sehmisch  <tmw@crushnet.org>

	* data/equipment.xml, data/items.xml,
	data/graphics/items/armor-chest-chainmail.png,
	data/graphics/sprites/chest-chainmail-female.png,
	data/graphics/sprites/chest-chainmail-female.xml,
	data/graphics/sprites/chest-chainmail-male.png,
	data/graphics/sprites/chest-chainmail-male.xml: Added chainmail by
	"The Judge". The proposed values are: Item ID: 625, Sprite ID: 25,
	Defence: 12, Weight: 120.
	* data/graphics/sprites/chest-cotton-female.png: Huh? Shouldn't this
	be on svn for ages?

2007-01-30  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* tmw.cbp: Updated Code::blocks project.

2007-01-30  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/CMakeLists.txt, src/Makefile.am, src/net/packet.h,
	src/net/packet.cpp, src/net/messageout.cpp: Removed unused Packet
	class.

2007-01-28  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/maps/new_8-1.tmx.gz, data/maps/new_11-1.tmx.gz: Map fixes by
	Pauan.

2007-01-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/shoplistbox.cpp, docs/INSTALL/win32.txt, INSTALL, NEWS:
	Upgraded to Guichan 0.6.1.

2007-01-22  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/updatewindow.cpp: Identify ourselves when requesting files
	from the update server.

2007-01-17  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* docs/win32-release.txt, src/gui/register.cpp, src/main.cpp: Changed
	default server.

2007-01-15  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/viewport.cpp, src/gui/viewport.h: Fixed issue where the
	player stops walking.