@@ -57,21 +57,10 @@ extern Minimap *minimap;
 
 char itemCurrenyQ[10] = "0";
 
-Spriteset *emotionset;
-
 Engine::Engine(Network *network):
     mCurrentMap(NULL),
     mNetwork(network)
 {
-    // Load the emotion set
-    ResourceManager *resman = ResourceManager::getInstance();
-    emotionset = resman->getSpriteset("graphics/sprites/emotions.png", 30, 32);
-    if (!emotionset) logger->error("Unable to load emotions spriteset!");
-}
-
-Engine::~Engine()
-{
-    emotionset->decRef();
 }
 
 void Engine::changeMap(const std::string &mapPath)
